corpus/custom.txt
================================================================================
Hello World
================================================================================
hello

--------------------------------------------------------------------------------

(document 
  (paragraph 
    (text)))

================================================================================
styles.bold: bold word with *
================================================================================
**hello**

--------------------------------------------------------------------------------

(document 
 (paragraph 
  (bold 
   (text))))

================================================================================
styles.bold: multi bold in a single line with *
================================================================================
**hello** **hello World** **hello World**

--------------------------------------------------------------------------------

(document 
 (paragraph 
  (bold 
   (text))
  (bold 
   (text))
  (bold 
   (text))))

================================================================================
styles.bold: bold word with __
================================================================================
__hello__

--------------------------------------------------------------------------------

(document 
 (paragraph 
  (bold 
   (text))))

================================================================================
styles.bold: multi bold in a single line with __
================================================================================
__hello__ __hello World__ __hello World__

--------------------------------------------------------------------------------

(document 
 (paragraph 
  (bold 
   (text))
  (bold 
   (text))
  (bold 
   (text))))

